@@ -485,9 +485,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
+                app:contentPaddingBottom="12dp"
                 android:visibility="@{viewModel.isFeatureEnabled(Constants.PREF.FEATURE_SHOPPING_LIST) ? View.VISIBLE : View.GONE}"
                 android:onClick="@{() -> activity.navigateDeepLink(@string/deep_link_shoppingListFragment)}"
-                android:onLongClickVoid="@{() -> activity.navigateDeepLink(@string/deep_link_shoppingModeFragment)}"
                 app:clickUtil="@{clickUtil}">
 
                 <LinearLayout
@@ -507,6 +507,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{viewModel.shoppingListDescriptionTextLive}" />
+
+                  <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.Grocy.Button.OutlinedButton.Icon"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/title_shopping_mode"
+                    android:onClick="@{() -> activity.navigateDeepLink(@string/deep_link_shoppingModeFragment)}"
+                    app:clickUtil="@{clickUtil}"
+                    app:icon="@drawable/ic_round_storefront" />
 
                 </LinearLayout>
 
