@@ -8,6 +8,7 @@
 - Improved: Logging on login page for Home Assistant connection (#670)
 - Improved: Moved shortcuts option from behavior to appearance settings
 - Improved: Added option for quick mode state when using scan button on overview page (#540, #648)
+- Improved: Added separate button for shopping mode to overview start page
 - Fixed: Home Assistant offline error (#670)
 - Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
 - Fixed: Deprecated Google Play developer profile link
